# assignments

./: README.md
Misc/vacume_cleaner_api/: .dockerfile  README.md  docker-compose.yaml  pyproject.toml  tibber-0.2.0-py3-none-any.whl
Misc/vacume_cleaner_api/hard_problem/: RobotCleanerPathHeavy.json  script.py
Misc/vacume_cleaner_api/test/: TESTING.md  test_api.py  test_schema.py
Misc/vacume_cleaner_api/tibber/: __init__.py  api.py  cli.py  models.py  schema.py
UiO/IN2010_2022/assignment_1/: main.aux  main.tex
UiO/IN2010_2022/assignment_1/src/: 1a.py  2b.py  3b.py  4a.py  4b.py
UiO/IN2010_2022/assignment_2/: Assignment 2.ipynb
UiO/IN2010_2022/assignment_2/.ipynb_checkpoints/: Assignment 2-checkpoint.ipynb
UiO/IN2010_2022/assignment_2/src/: innlevering2.py  test_input.csv
UiO/IN2010_2022/assignment_2/src/benchmark/: benchmarker.py  result.csv
UiO/IN2010_2022/assignment_2/src/drafts/: bubble_sort.py  insertion_sort.py  merge_sort.py  quicksort.py
UiO/IN2010_2022/assignment_3/: IN2010-innleveringsoppgave3.md
UiO/IN2010_2022/assignment_3/src/: alternative.py  innleveringsoppgave3.py  innleveringsoppgave3_concurrent.py  outdated.py
UiO/IN2010_2022/assignment_3/src/data/: movies.tsv
UiO/IN2090_2022/assignment_1/: main.tex
UiO/IN2090_2022/assignment_1/figures/raw/: .$raw_2.drawio.bkp  .$raw_3.drawio.bkp  (+2 more)
UiO/IN2090_2022/assignment_2/: assignment_dataset.sql  oblig2.sql
UiO/IN2090_2022/assignment_3/: oblig3.txt
UiO/IN2090_2022/assignment_4/: oblig4.sql
UiO/IN2090_2022/assignment_5/: huffsa.py
UiO/IN2090_2022/assignment_5/huffsa/: huffsa.sql
(+13 files in other folders)
